--- a/K8s/Deployment.yml
+++ b/K8s/Deployment.yml
@@ -64,3 +64,21 @@ spec:
             port: 80
       restartPolicy: Always
 status: {}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: httpd-service
+  namespace: K8S_NAMESPACE_VALUE
+  labels:
+    component: httpd
+    role: demo-svc
+spec:
+  ports:
+  - name: http
+    port: 80
+    targetPort: 80
+    protocol: TCP
+  type: ClusterIP
+  selector:
+    component: httpd
