updating kubernetes deployment snippet

--- a/K8s/Deployment.yml
+++ b/K8s/Deployment.yml
@@ -32,7 +32,9 @@ spec:
               topologyKey: "kubernetes.io/hostname"
       containers:
       - name: httpd
-        # imagePullPolicy: Always
+        imagePullPolicy: Always
+        # imagePullSecrets:
+        #   - name: myCustomSecret
         image: SVC_IMG_NAME_VALUE
         env:
         - name: NAMESPACE
@@ -76,7 +78,7 @@ metadata:
 spec:
   ports:
   - name: http
-    nodePort: 80
+    nodePort: 30004
     port: 80
     targetPort: 80
     protocol: TCP
