Adding RELEASE_VERSION to the docker image and k8s deployment file

--- a/K8s/Deployment.yml
+++ b/K8s/Deployment.yml
@@ -45,6 +45,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
+        - name: RELEASE_VERSION
+          value: RELEASE_VERSION_VALUE
         resources:
           requests:
             memory: "256Mi"
